# ChangeLog for app-text/poppler
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.255 2010/08/23 20:27:08 maekke Exp $

  23 Aug 2010; Markus Meier <maekke@gentoo.org> poppler-0.14.1.ebuild:
  arm stable, bug #331969

  21 Aug 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/poppler-0.12.3-config.patch:
  rm

  21 Aug 2010; Samuli Suominen <ssuominen@gentoo.org> poppler-0.14.1.ebuild:
  ppc64 stable wrt #331969

  18 Aug 2010; Jeroen Roovers <jer@gentoo.org> poppler-0.14.1.ebuild:
  Stable for HPPA PPC (bug #331969).

*poppler-0.14.2 (13 Aug 2010)

  13 Aug 2010; Maciej Mrozowski <reavertm@gentoo.org>
  +poppler-0.14.2.ebuild:
  Version bump, do not use preserve_old_lib - as one cannot possibly tell what
  version we're upgrading from which will cause invalid suggestions to run
  revdep-rebuild and upstream is bumpimg soversion often. Restore ewarn instead.

  10 Aug 2010; Markos Chandras <hwoarang@gentoo.org> poppler-0.14.1.ebuild:
  Stable on amd64 wrt bug #331969

  10 Aug 2010; Christian Faulhammer <fauli@gentoo.org>
  poppler-0.14.1.ebuild:
  stable x86, bug 331969

  26 Jul 2010; Jeroen Roovers <jer@gentoo.org> poppler-0.12.4-r3.ebuild:
  Stable for HPPA (bug #323271).

  23 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> poppler-0.14.1.ebuild:
  Use virtual/jpeg.

  18 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  poppler-0.12.4-r3.ebuild:
  ppc64 stable wrt #323271

  18 Jul 2010; <nixnut@gentoo.org> poppler-0.12.4-r3.ebuild:
  ppc stable #323271

*poppler-0.14.1 (08 Jul 2010)

  08 Jul 2010; Maciej Mrozowski <reavertm@gentoo.org>
  -poppler-0.14.0-r1.ebuild, +poppler-0.14.1.ebuild:
  Version bump 0.14.1, remove old

  24 Jun 2010; Pacho Ramos <pacho@gentoo.org> poppler-0.12.4-r3.ebuild:
  stable amd64, bug 323271

  21 Jun 2010; Samuli Suominen <ssuominen@gentoo.org>
  poppler-0.14.0-r1.ebuild: