@@ -1,6 +1,15 @@
 # ChangeLog for app-text/poppler
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.255 2010/08/23 20:27:08 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.257 2010/09/18 14:26:08 armin76 Exp $
+
+  18 Sep 2010; Raúl Porcel <armin76@gentoo.org> poppler-0.14.1.ebuild:
+  alpha/ia64/s390/sh/sparc stable wrt #331969
+
+*poppler-0.14.3 (11 Sep 2010)
+
+  11 Sep 2010; Maciej Mrozowski <reavertm@gentoo.org>
+  -poppler-0.14.2.ebuild, +poppler-0.14.3.ebuild:
+  Version bump, remove old
 
   23 Aug 2010; Markus Meier <maekke@gentoo.org> poppler-0.14.1.ebuild:
   arm stable, bug #331969
